assets/styles/pages/_post.scss
@use "./../components/shape-divider";
@use "./../components/comment.scss";

.post {
	overflow-x: hidden;
	h1 {
		color: $secondary;
		@media screen and (max-width: 768px) {
			font-size: 46px;
		}
		@media screen and (max-width: 480px) {
			font-size: 40px;
		}
	}

	.container > .content {
		min-width: 0;
		margin-top: 0;
		list-style: circle;
	}

	&__date {
		font-size: 18px;
		margin-top: 14px;
		color: $secondary;
		opacity: 0.8;
	}

	&__content {
		color: $primary;
		line-height: 1.6;
		margin-top: 50px;
	}
}

